force-app/main/default/objects/Lead/fields/Assigned_LO__c.field-meta.xml
<CustomField>
    <fullName>Assigned_LO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned LO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>