force-app/main/default/objects/Lead/fields/CIXF_ID__c.field-meta.xml
<CustomField>
    <fullName>CIXF_ID__c</fullName>
    <description>CIXF ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CIXF ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>