force-app/main/default/objects/Lead/fields/Created_By_User_Market__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Market__c</fullName>
    <formula>TExt(CreatedBy.User_s_Market__c)</formula>
    <label>Created By User Market</label>
    <type>Text</type>
</CustomField>