force-app/main/default/objects/Lead/fields/Created_By_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Created By User Role</label>
    <type>Text</type>
</CustomField>