force-app/main/default/objects/Lead/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <label>Current Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>BankView</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>BofA</fullName>
            </value>
            <value>
                <fullName>Cap One</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Elan</fullName>
            </value>
            <value>
                <fullName>FIA</fullName>
            </value>
            <value>
                <fullName>Fifth Third</fullName>
            </value>
            <value>
                <fullName>First Bankcard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>No Program</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>TCM</fullName>
            </value>
            <value>
                <fullName>TIB</fullName>
            </value>
            <value>
                <fullName>TMG</fullName>
            </value>
            <value>
                <fullName>UMB</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>WFB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>