force-app/main/default/objects/Lead/fields/Lead_Owner_Role_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Role_Hidden__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Lead Owner Role (Hidden)</label>
    <type>Text</type>
</CustomField>