force-app/main/default/objects/Lead/fields/Lead_Owner_s_Market_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_s_Market_Hidden__c</fullName>
    <formula>TEXT(Owner:User.User_s_Market__c)</formula>
    <label>Lead Owner&#39;s Market (Hidden)</label>
    <type>Text</type>
</CustomField>