force-app/main/default/objects/Lead/fields/Lead_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone_2__c</fullName>
    <description>This custom field is for a second phone number for a Lead Record</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Alternate phone number</inlineHelpText>
    <label>Lead Phone 2</label>
    <type>Phone</type>
</CustomField>