force-app/main/default/objects/Lead/fields/Lead_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone_3__c</fullName>
    <description>This is a third valid phone number for the Lead Record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Phone 3</label>
    <type>Phone</type>
</CustomField>