force-app/main/default/objects/Lead/fields/Lead_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Lead_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this to automatically send your referral to another Salesforce user. If you are NOT sending this referral to a Salesforce user, just leave it blank.</inlineHelpText>
    <label>Lead Recipient - Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>