force-app/main/default/objects/Lead/fields/Lead_Source_COI__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_COI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Source COI</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>