force-app/main/default/objects/Lead/fields/Lead_Source_COI_as_text_hidden__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_COI_as_text_hidden__c</fullName>
    <description>This hidden field</description>
    <formula>Lead_Source_COI__r.Id</formula>
    <label>Lead Source COI (as text_hidden)</label>
    <type>Text</type>
</CustomField>