force-app/main/default/objects/Lead/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <description>Used by the Mortgage team to track the stage of a particular lead</description>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
                <default>true</default>
                <label>New Lead</label>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Quote/Cost Worksheet Given</fullName>
            </value>
            <value>
                <fullName>Contact/Follow-Up Later</fullName>
            </value>
            <value>
                <fullName>Comparing Lenders</fullName>
            </value>
            <value>
                <fullName>Rate Shopping</fullName>
            </value>
            <value>
                <fullName>House Hunting</fullName>
            </value>
            <value>
                <fullName>Converted to Loan</fullName>
            </value>
            <value>
                <fullName>Inactive Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>