force-app/main/default/objects/Lead/fields/Mortgage_Product__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Product</label>
    <referenceTo>Mortgage_Product__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>