force-app/main/default/objects/Lead/fields/Other_Income_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Income Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>