force-app/main/default/objects/Lead/fields/Qualified_Count__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Count__c</fullName>
    <formula>IF( and (TEXT( Status)=&quot;Qualified&quot;,  IsConverted = True) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified # Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>