force-app/main/default/objects/Lead/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <inlineHelpText>Tell us whether we are trying to ultimately do business with a COMPANY or with a PERSON.</inlineHelpText>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>