force-app/main/default/objects/Lead/fields/ResourceOneOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>ResourceOneOwnerEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ResourceOneOwnerEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>