force-app/main/default/objects/Lead/fields/Unactioned_for_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Unactioned_for_7_Days__c</fullName>
    <formula>AND(NOW()-7&gt;CreatedDate, LastModifiedDate == CreatedDate)</formula>
    <inlineHelpText>This box will check itself when the lead or referral has not been modified beyond 7 days of creation</inlineHelpText>
    <label>Unactioned for 7 Days</label>
    <type>Checkbox</type>
</CustomField>