force-app/main/default/objects/Lead/fields/User_Profile_for_Reporting_Leads__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_for_Reporting_Leads__c</fullName>
    <formula>Owner:User.User_Profile_for_Reporting__c</formula>
    <label>User Profile for Reporting - Leads</label>
    <type>Text</type>
</CustomField>