force-app/main/default/objects/Lead/fields/Zip_Code_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_of_Property__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code of Property</label>
    <length>10</length>
    <type>Text</type>
</CustomField>