force-app/main/default/objects/Lead/recordTypes/Client_Lead.recordType-meta.xml
<RecordType>
    <fullName>Client_Lead</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Used for individual clients, like those in Wealth Mgmt or I&amp;P</description>
    <label>Client Lead</label>
</RecordType>