force-app/main/default/objects/Lead/recordTypes/Marketing_Lead.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Lead</fullName>
    <active>true</active>
    <businessProcess>Marketing</businessProcess>
    <label>Marketing Lead</label>
</RecordType>