force-app/main/default/objects/Lead/recordTypes/Mortgage_Lead.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Lead</fullName>
    <active>true</active>
    <businessProcess>Mortgage</businessProcess>
    <label>Mortgage Lead</label>
</RecordType>