force-app/main/default/objects/Lead/validationRules/Stop_Mortgage_Users_From_Creating_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Mortgage_Users_From_Creating_Leads</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
$User.Users_Notes_Admin_Only__c = &quot;No Leads&quot;
)</errorConditionFormula>
    <errorMessage>Please create an Opportunity instead of a Lead</errorMessage>
</ValidationRule>